* Mon Dec 18 2002 <valery_reznic@users.sourceforge.net> 1.3-1
- more simple and robust filter

* Thu Dec 12 2002 <gerbier@users.sourceforge.net> 1.3.1
- add filter option for "pluggins"
- rewrite --resolv-dep as pluggin

* Mon Dec 10 2002 <valery_reznic@users.sourceforge.net> 1.3-0
- change long options name to be more consistant
- added support for %%lang

* Mon Dec 10 2002 <gerbier@users.sourceforge.net> 1.3.0
- add man page
- fix bug with % in changelog
- add -r|--resolv-dep option
- add french translation in specfile

* Sat Dec  3 2002 <valery_reznic@users.sourceforge.net> 1.3.0
- added long options

* Sat Dec  2 2002 <valery_reznic@users.sourceforge.net> 1.2-0
- now rpmrebuild can be run as 'rpm --rpmrebuild'

* Sat Nov 24 2002 <valery_reznic@users.sourceforge.net> 1.1-1
- filter "(none)" answer from rpm the scripts queries

* Sat Nov 23 2002 <gerbier@users.sourceforge.net> 1.1-0
- filter "(none)" answer from rpm queries

* Thu Oct 22 2002 <gerbier@users.sourceforge.net> 1.0-0
- replace vi by %%define
- add command lines options (-h : help, -v : verbose, -V: version)
- add lsm description
- move .popt to /usr/lib/rpmrebuild
- fix some .popt problems with rpm 4.1 (Han Holl)
- have a link from rpmrebuild.sh to rpmrebuild
- add option -b for batch processing
- add option -k to keep installed files perm
- fix a buggy test for non-installed packages (Han Holl)
- remove dirname and move code to /usr/lib/rpmrebuild
- use rpmbuild  if it exists (rpm 4.1)  (Han Holl)
- add -d option to change local dir
- add -e  option to edit spec file (Han Holl)
- add generation verify directive to the spec file
- add build testing and install testing
- fix a bug if release change
- specfile now temporary (Valery Reznic)
- added -s flag to generate spec file only (Valery Reznic)
- default dir for rpm now not current dir but naitive rpm dir (Valery Reznic)
- fix a bug for redhat 6.2 package name
- fix a bug for package providing
