@@ -1,3 +1,6 @@
+* Mon Dec 29 2002 <valery_reznic@users.sourceforge.net> 1.3-1
+- add '-p' option. Now is possible rebuild not only installed rpm, but rpm file too. May be usefull with '-e' or '--filter' option
+
 * Mon Dec 18 2002 <valery_reznic@users.sourceforge.net> 1.3-1
 - more simple and robust filter
 
